tests/snapshots/encode_pattern_match__common.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/common.hvm
---
(True) = λ#Bool True λ#Bool False True

(False) = λ#Bool True λ#Bool False False

(Filled) = λvalue λ#Box Filled λ#Box Empty (#Box.Filled.value Filled value)

(Empty) = λ#Box Filled λ#Box Empty Empty

(North) = λ#Direction North λ#Direction South λ#Direction East λ#Direction West North

(South) = λ#Direction North λ#Direction South λ#Direction East λ#Direction West South

(East) = λ#Direction North λ#Direction South λ#Direction East λ#Direction West East

(West) = λ#Direction North λ#Direction South λ#Direction East λ#Direction West West

(Red) = λ#Light Red λ#Light Yellow λ#Light Green Red

(Yellow) = λ#Light Red λ#Light Yellow λ#Light Green Yellow

(Green) = λ#Light Red λ#Light Yellow λ#Light Green Green

(Cons) = λx λxs λ#List Cons λ#List Nil (#List.Cons.xs (#List.Cons.x Cons x) xs)

(Nil) = λ#List Cons λ#List Nil Nil

(Some) = λx λ#Option Some λ#Option None (#Option.Some.x Some x)

(None) = λ#Option Some λ#Option None None

(Ok) = λa λ#Result Ok λ#Result Err (#Result.Ok.a Ok a)

(Err) = λb λ#Result Ok λ#Result Err (#Result.Err.b Err b)
