tests/snapshots/encode_pattern_match__match_num_pred.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/match_num_pred.hvm
---
TaggedScott:
(pred) = λa switch a { 0: 0; _: λb b }

(pred2) = λa switch a { 0: 0; _: λb switch b { 0: 0; _: λc c } }

(pred3) = λa switch a { 0: 0; _: λb switch b { 0: 0; _: λc switch c { 0: 0; _: λd (- (+ d 3) 3) } } }

(zero) = λa switch a { 0: 1; _: λb switch b { 0: 0; _: λ* 0 } }

(main) = *

Scott:
(pred) = λa switch a { 0: 0; _: λb b }

(pred2) = λa switch a { 0: 0; _: λb switch b { 0: 0; _: λc c } }

(pred3) = λa switch a { 0: 0; _: λb switch b { 0: 0; _: λc switch c { 0: 0; _: λd (- (+ d 3) 3) } } }

(zero) = λa switch a { 0: 1; _: λb switch b { 0: 0; _: λ* 0 } }

(main) = *
