tests/snapshots/encode_pattern_match__pattern_match_encoding.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/pattern_match_encoding.hvm
---
(Foo) = λx (#MyType x Foo$PA Foo$PB Foo$PC Foo$PD Foo$PE)

(main) = (Foo A 2)

(A) = λa λ#MyType A λ#MyType B λ#MyType C λ#MyType D λ#MyType E (A a)

(B) = λb λ#MyType A λ#MyType B λ#MyType C λ#MyType D λ#MyType E (B b)

(C) = λc λ#MyType A λ#MyType B λ#MyType C λ#MyType D λ#MyType E (C c)

(D) = λd1 λd2 λ#MyType A λ#MyType B λ#MyType C λ#MyType D λ#MyType E (D d1 d2)

(E) = λe1 λe2 λ#MyType A λ#MyType B λ#MyType C λ#MyType D λ#MyType E (E e1 e2)

(Foo$R0) = λa 100

(Foo$R1) = λ* 200

(Foo$PA) = λy0 (Foo$R0 *)

(Foo$PB) = λy0 (Foo$R1 *)

(Foo$PC) = λy0 (Foo$R1 *)

(Foo$PD) = λy0 λy1 (Foo$R1 *)

(Foo$PE) = λy0 λy1 (Foo$R1 *)
